@@ -1,0 +1,5 @@
+{
+	"version": 1,
+	"name": "The sword of shields",
+	"description": "It's a shield"
+}
