@@ -1,0 +1,5 @@
+{
+	"version": 1,
+	"name": "The sword of swords",
+	"description": "It's a sword"
+}
