@@ -4,14 +4,16 @@ import { Shape, Text, Canvas } from '@bucky24/react-canvas';
 import {
 	getBaseEnemyList,
 	getBaseObjectList,
-	getBaseCharacterList
+	getBaseCharacterList,
+	getBaseEquipmentList,
 } from 'system';
 
 import { Panes, setUIPane } from '../store/ducks/ui';
 import {
 	setBaseEnemies,
 	setBaseObjects,
-	setBaseCharacters
+	setBaseCharacters,
+	setBaseEquipment,
 } from '../store/ducks/gameData';
 
 class Loader extends Component {
@@ -26,11 +28,13 @@ class Loader extends Component {
 		this.loadBaseEnemy = this.loadBaseEnemy.bind(this);
 		this.loadBaseObjects = this.loadBaseObjects.bind(this);
 		this.loadBaseCharacters = this.loadBaseCharacters.bind(this);
+		this.loadBaseEquipment = this.loadBaseEquipment.bind(this);
 
 		this.toLoad = [
 			{ name: 'Base Enemy Config', fn: this.loadBaseEnemy },
 			{ name: 'Base Object Config', fn: this.loadBaseObjects },
-			{ name: 'Base Character Config', fn: this.loadBaseCharacters }
+			{ name: 'Base Character Config', fn: this.loadBaseCharacters },
+			{ name: 'Base Equipment Config', fn: this.loadBaseEquipment },
 		];
 	}
 	
@@ -78,6 +82,16 @@ class Loader extends Component {
 		})
 		.then((characters) => {
 			this.props.setBaseCharacters(characters);
+		});
+	}
+	
+	loadBaseEquipment() {
+		return Promise.resolve()
+		.then(() => {
+			return getBaseEquipmentList();
+		})
+		.then((equipment) => {
+			this.props.setBaseEquipment(equipment);
 		});
 	}
 
@@ -132,7 +146,10 @@ const mapDispatchToProps = (dispatch) => {
 		},
 		setBaseCharacters: (data) => {
 			dispatch(setBaseCharacters(data));
-		}
+		},
+		setBaseEquipment: (data) => {
+			dispatch(setBaseEquipment(data));
+		},
 	};
 };
 
