@@ -1,10 +1,6 @@
 For v0.5.0
-* Add in a way to save the game
-* More "true to original" game controls
 * Better enemy AI
 * Campaign progression through completing maps
-* At least two pieces of equipment in base game
-* Ability to remove and equip equipment to characters
 * More enemies
 
 For v0.6.0
